--- a/documentation/asciidoc/titles/stories.adoc
+++ b/documentation/asciidoc/titles/stories.adoc
@@ -1,11 +1,19 @@
+//Overview
 include::{stories}/assembly_operator_overview.adoc[leveloffset=+1]
-ifdef::productized[]
-include::{stories}/assembly_tech_preview.adoc[leveloffset=+1]
-endif::productized[]
+
+//Community only
 ifndef::productized[]
 include::{stories}/assembly_deploying_operator.adoc[leveloffset=+1]
 endif::productized[]
+
+//Product only
+ifdef::productized[]
+include::{stories}/assembly_tech_preview.adoc[leveloffset=+1]
+endif::productized[]
+
 include::{stories}/assembly_creating_clusters.adoc[leveloffset=+1]
+include::{stories}/assembly_creating_services.adoc[leveloffset=+1]
+include::{stories}/assembly_adjusting_pod_resources.adoc[leveloffset=+1]
 include::{stories}/assembly_exposing_services.adoc[leveloffset=+1]
 include::{stories}/assembly_configuring_authentication.adoc[leveloffset=+1]
 include::{stories}/assembly_encrypting_endpoints.adoc[leveloffset=+1]
