--- a/documentation/asciidoc/topics/proc_encrypting_endpoints_tls_secret.adoc
+++ b/documentation/asciidoc/topics/proc_encrypting_endpoints_tls_secret.adoc
@@ -6,12 +6,6 @@ Add a PKCS12 keystore or TLS certificate/key pair to a secret and configure
 .Procedure
 
 . Create an encryption secret.
-+
-For example, to create `tls_secret.yaml` see one of the following:
-+
-* link:#ref_tls_cert_secret-security_endpoints[Certificate Secret]
-* link:#ref_tls_cert_secret-security_endpoints[Keystore Secret]
-+
 . Add the encryption secret to your {openshiftshort} namespace.
 +
 [source,options="nowrap",subs=attributes+]
@@ -32,3 +26,8 @@ include::yaml_annotated/cr_tls_secret.yaml[]
 +
 . Apply the custom resource with `{oc_apply_cr}`.
 . Use `{oc_get_pods_w}` to watch the {ispn_operator} apply the custom resources.
+
+.Reference
+
+* link:#ref_tls_cert_secret-security_endpoints[Certificate Secret]
+* link:#ref_tls_cert_secret-security_endpoints[Keystore Secret]
