--- a/documentation/asciidoc/topics/attributes/community-attributes.adoc
+++ b/documentation/asciidoc/topics/attributes/community-attributes.adoc
@@ -13,6 +13,8 @@
 :example_crd_name: example-infinispan
 :example_namespace: ispn-namespace
 
+:image_resource: infinispan/server:latest
+
 include::oc_cmds.adoc[]
 include::links.adoc[]
 
@@ -54,6 +56,13 @@ include::links.adoc[]
 :openshiftplatform: Red Hat OpenShift Container Platform
 :ocp: OpenShift Container Platform
 :osweb: OpenShift Web Console
+:datagridservice: Data Grid service
+:cacheservice: Cache service
+
+
+//
+// Cloud services
+//
 :datagridservice: Data Grid service
 :cacheservice: Cache service
 
