--- a/documentation/asciidoc/topics/proc_exposing_external_service.adoc
+++ b/documentation/asciidoc/topics/proc_exposing_external_service.adoc
@@ -4,9 +4,6 @@
 .Procedure
 
 . Create a custom resource that exposes an external service.
-+
-See link:#ref_expose_external-access[External Service Resources].
-+
 . Apply the custom resources, for example:
 +
 [source,options="nowrap",subs=attributes+]
@@ -25,3 +22,7 @@ NAME                         TYPE            CLUSTER-IP       EXTERNAL-IP   PORT
 ----
 +
 The preceding example shows an external service named `{example_crd_name}-external` of type `LoadBalancer`.
+
+.Reference
+
+link:#ref_expose_external-access[External Service Resources]
