--- a/documentation/asciidoc/topics/proc_shut_down_gracefully.adoc
+++ b/documentation/asciidoc/topics/proc_shut_down_gracefully.adoc
@@ -1,23 +1,21 @@
 [id='shutting_down-{context}']
-= Shutting Down {brandname} Clusters
-Gracefully stop all {brandname} pods in the cluster. The {ispn_operator}
-ensures that all permanent cache configurations are stored in the persistent
-volume.
+= Shutting Down and Restarting {brandname} Clusters
+Gracefully shut down your {brandname} clusters before restarting them.
 
-Data Distribution::
-{brandname} saves the distribution of data across the cluster when you stop
-pods. For this reason, when you restore {brandname} clusters, `replicas` must
-match the number of pods that were in the cluster before you shut it down.
-+
-For example, you shut down a cluster of 6 pods. When you restart the cluster,
-you must set the value of `replicas` to `6`.
+{cacheservice} pods store permanent cache definitions in persistent volumes so
+they survive between cluster restarts.
 
-Data Passivation::
-The {ispn_operator} also writes all data to persistent volumes before shutting down {datagridservice} pods.
-+
-You must ensure that the persistent volume has enough available space for your
-data. If the size of the persistent volume is not large enough to store all 
-data in memory, {brandname} writes an exception to logs and you lose data.
+{datagridservice} pods store permanent cache definitions and also persist your
+data during cluster shutdown.
+
+[IMPORTANT]
+====
+You should configure the storage size for {datagridservice} pods to ensure that the persistent volume can hold all your data.
+
+If the available container storage is less than the amount of memory available
+to {datagridservice} pods, {brandname} writes an exception to logs and data
+loss occurs during shutdown.
+====
 
 .Procedure
 
@@ -27,3 +25,20 @@ data in memory, {brandname} writes an exception to logs and you lose data.
 spec:
   replicas: 0
 ----
+
+* To restart {brandname} clusters, set the value of `replicas` to the same
+number of pods that were in the cluster before you shut it down.
++
+For example, you shut down a cluster of 6 pods. When you restart the cluster, you must set:
++
+----
+spec:
+  replicas: 6
+----
++
+This allows {brandname} to restore the distribution of data across the cluster. When all pods in the cluster are running, you can then scale it up or down.
+
+.Reference
+
+* link:#storage_resources-pods[Storage Resources]
+* link:#ref_pv-pods[Persistent Volume Claims]
