--- a/documentation/asciidoc/topics/proc_creating_sa_tokens.adoc
+++ b/documentation/asciidoc/topics/proc_creating_sa_tokens.adoc
@@ -2,23 +2,23 @@
 = Creating Service Account Tokens
 Traffic between independent {openshiftshort} installations occurs through a Kubernetes API. {ocp} clusters use tokens to authenticate with and access the API.
 
-To enable cross-site replication between {brandname} clusters you must add tokens to the namespace on each site. For example, SiteA needs a secret with the token for SiteB. SiteB also needs a secret with the token for SiteA.
+To enable cross-site replication between {brandname} clusters you must add tokens to the namespace on each site. For example, **LON** needs a secret with the token for **NYC**. **NYC** also needs a secret with the token for **LON**.
 
 .Procedure
 
 . Create service account tokens on each {openshiftshort} instance.
 +
-For example, on SiteA create a token for SiteB as follows:
+For example, on **LON** create a token for **NYC** as follows:
 +
 [source,options="nowrap",subs=attributes+]
 ----
-$ oc create sa site-a
-serviceaccount/site-a created
+$ oc create sa lon
+serviceaccount/lon created
 ----
 +
 . Find the token in the list of secrets in your {openshiftshort} namespace.
 +
-The following example shows two `site-a` tokens:
+The following example shows two `lon` tokens:
 +
 [source,options="nowrap",subs=attributes+]
 ----
@@ -26,24 +26,24 @@ $ oc get secrets
 
 NAME                       TYPE
 ...
-site-a-token-8j6d8         kubernetes.io/service-account-token
-site-a-token-g2brv         kubernetes.io/service-account-token
+lon-token-8j6d8         kubernetes.io/service-account-token
+lon-token-g2brv         kubernetes.io/service-account-token
 ----
 +
-. Retrieve a token to allow backup sites to authenticate with the local
+. Retrieve a token to allow backup locations to authenticate with the local
 {openshiftshort} cluster.
 +
 The following example shows an encoded string in the `token` field:
 +
 [source,options="nowrap",subs=attributes+]
 ----
-$ oc describe secret site-a-token-8j6d8
+$ oc describe secret lon-token-8j6d8
 
-Name:         site-a-token-8j6d8
+Name:         lon-token-8j6d8
 Namespace:    local-operators
 Labels:       <none>
 Annotations:  kubernetes.io/created-by: openshift.io/create-dockercfg-secrets
-              kubernetes.io/service-account.name: site-a
+              kubernetes.io/service-account.name: lon
               kubernetes.io/service-account.uid: c22bc8d6-ffd8-11e9-adb6-0a8e23c49339
 
 Type:  kubernetes.io/service-account-token
@@ -56,18 +56,18 @@ service-ca.crt:  5750 bytes
 token:           eyJhbGciOiJSUzI1NiIsImtpZCI6IiJ9...
 ----
 +
-. Create secrets on each site that contain service account tokens for the corresponding backup site.
-.. Log in to {ocp} at SiteB.
-.. Add the service account token to a `site-a-token` secret.
+. Create secrets that contain service account tokens for the backup locations.
+.. Log in to {ocp} at **NYC**.
+.. Add the service account token to a `lon-token` secret.
 +
 [source,options="nowrap",subs=attributes+]
 ----
-oc create secret generic site-a-token --from-literal=token=eyJhbGciOiJSUzI1NiIsImtpZCI6IiJ9...
+oc create secret generic lon-token --from-literal=token=eyJhbGciOiJSUzI1NiIsImtpZCI6IiJ9...
 ----
 +
-.. Repeat the preceding steps to create a `site-b-token` secret on SiteA.
+.. Repeat the preceding steps to create a `nyc-token` secret on **LON**.
 
-After you add service account tokens to each backup site, the
+After you add service account tokens to each backup location, the
 {openshiftshort} instances can authenticate with each other so that {brandname}
 clusters can form cross-site views.
 
