--- a/documentation/asciidoc/topics/ref_xsite_crd.adoc
+++ b/documentation/asciidoc/topics/ref_xsite_crd.adoc
@@ -6,33 +6,19 @@
 include::yaml_annotated/cr_backup_site.yaml[]
 ----
 
-<1> specifies the DataGrid service. {brandname} supports cross-site replication with the DataGrid service only.
-<2> names the local site for a {brandname} cluster.
 //Community
 ifndef::productized[]
+<1> specifies the DataGrid service. {brandname} supports cross-site replication with the DataGrid service only.
+<2> names the local site for a {brandname} cluster.
 <3> defines the externally exposed service.
 * Use `NodePort` for local clusters on the same network. For example, if you use Minikube for testing purposes.
 * Use `LoadBalancer` for independent {openshiftshort} clusters.
-endif::productized[]
-//Product
-ifdef::productized[]
-<3> specifies `LoadBalancer` as the service that exposes the {openshiftshort} cluster to externally network traffic.
-endif::productized[]
-<4> provides connection information for all site masters.
-<5> site name that matches a corresponding `.spec.service.sites.local.name` resource.
-//Community
-ifndef::productized[]
-<6> specifies a site master location.
-//* Use `xsite://` if the site master has a static hostname and port.
-* Use `minikube://` if the site master is a Minikube instance.
-* Use `openshift://` if the site master is an {openshiftshort} cluster. You should specify the URL of the Kubernetes API for the site.
-endif::productized[]
-//Product
-ifdef::productized[]
-<6> specifies the URL of the Kubernetes API for the site.
-endif::productized[]
-//Community
-ifndef::productized[]
+<4> provides connection information for all backup locations.
+<5> name of a backup location that matches the `.spec.service.sites.local.name` resource.
+<6> specifies a backup location.
+//* Use `xsite://` if the backup location has a static hostname and port.
+* Use `minikube://` if the backup location is a Minikube instance.
+* Use `openshift://` if the backup location is an {openshiftshort} cluster. You should specify the URL of the Kubernetes API.
 <7> specifies the access secret for a site.
 +
 [NOTE]
@@ -41,7 +27,14 @@ This secret contains different authentication objects, depending on your
 Kubernetes environment.
 ====
 endif::productized[]
+
 //Product
 ifdef::productized[]
-<6> specifies the secret that contains the service account token for the backup site.
+<1> specifies the DataGrid service. {brandname} supports cross-site replication with the DataGrid service only.
+<2> names the local site for a {brandname} cluster.
+<3> specifies `LoadBalancer` as the service that handles communication between backup locations.
+<4> provides connection information for all backup locations.
+<5> name of a backup location that matches the `.spec.service.sites.local.name` resource.
+<6> specifies the URL of the Kubernetes API for the backup location.
+<7> specifies the secret that contains the service account token for the backup site.
 endif::productized[]
