--- a/documentation/asciidoc/topics/attributes/links.adoc
+++ b/documentation/asciidoc/topics/attributes/links.adoc
@@ -13,3 +13,11 @@
 :link_os_sa_tokens: https://docs.openshift.com/container-platform/4.2/authentication/using-service-accounts-in-applications.html[Using service accounts in applications]
 
 :link_os_crds: https://docs.openshift.com/container-platform/4.2/operators/crds/crd-managing-resources-from-crds.html[Managing resources from Custom Resource Definitions]
+
+:link_os_olm: https://docs.openshift.com/container-platform/4.2/operators/understanding-olm/olm-understanding-olm.html[Understanding the Operator Lifecycle Manager]
+
+:link_os_olm_adding: https://docs.openshift.com/container-platform/4.2/operators/olm-adding-operators-to-cluster.html#olm-installing-operators-from-operatorhub_olm-adding-operators-to-a-cluster[Approval Strategy]
+
+:link_olm: https://github.com/operator-framework/operator-lifecycle-manager[Operator Lifecycle Manager]
+
+:link_olm_arch: https://github.com/operator-framework/operator-lifecycle-manager/blob/master/doc/design/architecture.md[OLM Architecture]
