--- a/documentation/asciidoc/topics/attributes/community-attributes.adoc
+++ b/documentation/asciidoc/topics/attributes/community-attributes.adoc
@@ -15,6 +15,8 @@
 
 :image_resource: infinispan/server:latest
 
+:pv_path: /opt/infinispan/server/data
+
 include::oc_cmds.adoc[]
 include::links.adoc[]
 
@@ -82,6 +84,8 @@ include::links.adoc[]
 :brandcli: cli
 :moduleprefix: ispn
 :infinispanslot: ispn-10.0
+
+:schemaversion: 11.0
 
 :download_url: https://infinispan.org/download/
 :javadocroot: https://docs.jboss.org/infinispan/10.0/apidocs
